Updated the configuration with users and passwords for the release checkout.
git-svn-id: http://ikube.googlecode.com/svn/trunk@1244 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/libs/src/main/resources/ikube/common/spring.properties
+++ b/code/libs/src/main/resources/ikube/common/spring.properties
@@ -108,6 +108,10 @@ jdbc.testConnectionOnCheckin=true
 jdbc.testConnectionOnCheckout=true
 jdbc.unreturnedConnectionTimeout=6000000
 
+db2.jdbc.driver=com.ibm.db2.jcc.DB2Driver
+oracle.jdbc.driver=oracle.jdbc.driver.OracleDriver
+postgres.jdbc.driver=org.postgresql.Driver
+
 # H2 database, this is for distribution and production. This 
 # database is what ikube will use in the field
 ikube.dataSource=nonXaDataSourceH2
