--- a/pom.xml
+++ b/pom.xml
@@ -57,8 +57,8 @@
 		<module>code/core</module>
 		<module>code/war</module>
 		<module>code/site</module>
-		<module>code/libs</module>
-		<module>code/tool</module>
+		<!-- <module>code/libs</module>
+		<module>code/tool</module> -->
 	</modules>
 
 	<build>
