Fiddling with Hazelcast again, not playing nice in a dense cluster.
git-svn-id: http://ikube.googlecode.com/svn/trunk@1251 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/libs/src/main/resources/ikube/common/spring.properties
+++ b/code/libs/src/main/resources/ikube/common/spring.properties
@@ -23,6 +23,7 @@ throttle=0
 max.actions=5
 # Max index size before another one is started in megs
 max.index.size=25000
+max.retry=100
 
 # These are client specific for Lucene
 analyzed=true
