Finalizing the last few things for the branch.
git-svn-id: http://ikube.googlecode.com/svn/trunk@1274 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/libs/src/main/resources/ikube/common/spring.properties
+++ b/code/libs/src/main/resources/ikube/common/spring.properties
@@ -86,10 +86,9 @@ minimum.free.space.for.notifications=10000
 h2.jdbc.userid=sa
 h2.jdbc.password=
 h2.jdbc.driver=org.h2.Driver
-
-# Database urls
 h2.jdbc.url=jdbc:h2:file:ikube/ikube
-# h2.jdbc.url=jdbc:h2:mem:ikube
+
+#h2.jdbc.url=jdbc:h2:mem:ikube
 #jdbc:h2:tcp://localhost/~/ikube
 
 # Database options
@@ -101,8 +100,8 @@ h2.jdbc.url=jdbc:h2:file:ikube/ikube
 jdbc.minPoolSize=1
 jdbc.maxPoolSize=100
 jdbc.maxStatements=1000
-jdbc.checkOutTimeout=10000000
-jdbc.numHelperThreads=25
+jdbc.checkOutTimeout=60000
+jdbc.numHelperThreads=10
 jdbc.breakAfterAcquireFailure=true
 jdbc.debugUnreturnedConnectionStackTraces=true
 jdbc.testConnectionOnCheckin=true
@@ -115,15 +114,15 @@ postgres.jdbc.driver=org.postgresql.Driver
 
 # H2 database, this is for distribution and production. This 
 # database is what ikube will use in the field
-#ikube.dataSource=nonXaDataSourceH2
-#ikube.persistenceUnit=IkubePersistenceUnitH2
-#ikube.dataSourceType=H2
-#ikube.jdbc.userid=${h2.jdbc.userid}
-#ikube.jdbc.password=
-#ikube.jdbc.url=${h2.jdbc.url}
-#ikube.jdbc.driver=${h2.jdbc.driver}
-#ikube.jdbc.dictionary=h2(batchLimit=1000)
-#ikube.dataBaseClass=ikube.database.jpa.DataBaseJpa
+ikube.dataSource=nonXaDataSourceH2
+ikube.persistenceUnit=IkubePersistenceUnitH2
+ikube.dataSourceType=H2
+ikube.jdbc.userid=${h2.jdbc.userid}
+ikube.jdbc.password=${h2.jdbc.password}
+ikube.jdbc.url=${h2.jdbc.url}
+ikube.jdbc.driver=${h2.jdbc.driver}
+ikube.jdbc.dictionary=h2(batchLimit=1000)
+ikube.dataBaseClass=ikube.database.jpa.DataBaseJpaH2
 
 # Db2 database, this database is for testing essentially as
 # there is always an instance running on the server
@@ -139,15 +138,15 @@ postgres.jdbc.driver=org.postgresql.Driver
 
 # Oracle database, this database is for testing essentially as
 # there is always an instance running on the server
-ikube.dataSource=nonXaDataSourceOracle
-ikube.persistenceUnit=IkubePersistenceUnitOracle
-ikube.dataSourceType=ORACLE
-ikube.jdbc.userid=${oracle.jdbc.userid}
-ikube.jdbc.password=${oracle.jdbc.password}
-ikube.jdbc.url=${oracle.jdbc.url}
-ikube.jdbc.driver=${oracle.jdbc.driver}
-ikube.jdbc.dictionary=oracle(batchLimit=1000)
-ikube.dataBaseClass=ikube.database.jpa.DataBaseJpaOracle
+#ikube.dataSource=nonXaDataSourceOracle
+#ikube.persistenceUnit=IkubePersistenceUnitOracle
+#ikube.dataSourceType=ORACLE
+#ikube.jdbc.userid=${oracle.jdbc.userid}
+#ikube.jdbc.password=${oracle.jdbc.password}
+#ikube.jdbc.url=${oracle.jdbc.url}
+#ikube.jdbc.driver=${oracle.jdbc.driver}
+#ikube.jdbc.dictionary=oracle(batchLimit=1000)
+#ikube.dataBaseClass=ikube.database.jpa.DataBaseJpaOracle
 
 # Postgres ikube database
 #ikube.dataSource=nonXaDataSourcePostgresql
