--- a/build.xml
+++ b/build.xml
@@ -7,15 +7,26 @@
 	<property name="profile" value="production" />
 	<property name="user-dir" value="${user.dir}" />
 	<property name="user-home" value="${user.home}" />
-
-	<target name="deploy-to-servers">
-		<antcall target="go">
-			<param name="userid" value="${server-one-userid}" />
-			<param name="password" value="${server-one-password}" />
-			<param name="server-ip" value="${server-one-ip}" />
+	
+	<taskdef name="sshexcute" classname="ikube.ant.SshXcuteTask" classpath="classes" />
+	
+	<target name="start-tomcat">
+		<antcall target="execute-remote-command">
+			<param name="userid" value="michael|michael" />
+			<param name="password" value="password|password" />
+			<param name="server-ip" value="192.168.1.8|192.168.1.8" />
+			<param name="command" value="cd ${tomcat-bin-directory};./catalina.sh start;|cd ${tomcat-bin-directory};./catalina.sh stop;" />
 		</antcall>
 	</target>
-	
+		
+	<target name="deploy-to-servers">
+		<antcall target="go">
+			<param name="userid" value="${userids}" />
+			<param name="password" value="${passwords}" />
+			<param name="server-ip" value="${server-ips}" />
+		</antcall>
+	</target>
+
 	<target name="go">
 		<antcall target="prepare" />
 		<!-- Deploy the configuration and ikube and start the servers -->
@@ -27,19 +38,17 @@
 	<target name="go-server">
 		<!-- Stop the server -->
 		<antcall target="execute-remote-command">
-			<param name="command" value="
-				cd ${tomcat-bin-directory}; ./catalina.sh stop;" />
+			<param name="command" value=". /etc/profile;cd ${tomcat-bin-directory};./catalina.sh stop;" />
 		</antcall>
-		<sleep seconds="20" />
+		<sleep seconds="10" />
 		<!-- Hard kill the server just in case -->
 		<antcall target="execute-remote-command">
-			<param name="command" value="
-				ps -ef | grep apache-tomcat-7.0.33-8080 | grep -v grep | awk '{print $2}' | xargs kill -9;" 
-			/>
+			<param name="command" value="ps -ef | grep apache-tomcat-7.0.33-8080 | grep -v grep | awk '{print $2}' | xargs kill -9;" />
 		</antcall>
 		<!-- Clean all the output folders and the configuration -->
 		<antcall target="execute-remote-command">
 			<param name="command" value="
+					. /etc/profile;
 					chmod 777 -R ${tomcat-home};
 					rm -rf ${tomcat-home}/bin/ikube;
 					rm -rf ${tomcat-home}/webapps/ikube*;
@@ -68,35 +77,42 @@
 		</antcall>
 		<!-- Start the server again -->
 		<antcall target="execute-remote-command">
-			<param name="command" value="
-				cd ${tomcat-bin-directory}; ./catalina.sh start;" />
+			<param name="command" value=". /etc/profile;cd ${tomcat-bin-directory};./catalina.sh start;" />
 		</antcall>
 	</target>
-
-	<target name="deploy-ikube-site">
-		<scp file="code/site/target/site.war" todir="${userid}:${password}@${server-ip}:${tomcat-webapps-directory}" trust="true" failonerror="true" verbose="${verbose}" />
-	</target>
-
-	<target name="prepare">
-		<antcall target="deploy-configuration-for-jetty" />
-	</target>
-
+	
 	<target name="copy-directory-to-server">
-		<scp todir="${userid}:${password}@${server-ip}:${server-directory}" trust="true" failonerror="true" verbose="${verbose}">
+		<scp 
+			todir="${userid}:${password}@${server-ip}:${server-directory}" 
+			failonerror="true" 
+			verbose="${verbose}"
+			trust="true">
 			<fileset dir="${directory-to-copy}" />
 		</scp>
 	</target>
 
 	<target name="copy-file-to-server">
-		<scp todir="${userid}:${password}@${server-ip}:${server-directory}" trust="true" failonerror="true" verbose="${verbose}">
+		<scp 
+			todir="${userid}:${password}@${server-ip}:${server-directory}" 
+			failonerror="true" 
+			verbose="${verbose}"
+			trust="true">
 			<fileset file="${file-to-copy}" />
 		</scp>
 	</target>
 
 	<target name="execute-remote-command">
-		<sshexec host="${server-ip}" trust="true" username="${userid}" password="${password}" command="${command}" failonerror="true" usepty="true" />
+		<sshexcute 
+			ips="${server-ip}" 
+			usernames="${userid}" 
+			passwords="${password}" 
+			commands="${command}" />
 	</target>
 
+	<target name="prepare">
+		<antcall target="deploy-configuration-for-jetty" />
+	</target>
+	
 	<target name="deploy-configuration-for-jetty" description="Copies the configuration folder to the base of the project modules so Jetty can start">
 		<copy todir="code/core/ikube">
 			<fileset dir="${configuration-directory}" />
