--- a/pom.xml
+++ b/pom.xml
@@ -56,8 +56,8 @@
 	<modules>
 		<module>code/core</module>
 		<module>code/war</module>
-		<module>code/site</module>
-		<!-- <module>code/libs</module>
+		<!-- <module>code/site</module>
+		<module>code/libs</module>
 		<module>code/tool</module> -->
 	</modules>
 
@@ -160,6 +160,11 @@
 					<artifactId>maven-bundle-plugin</artifactId>
 					<version>2.3.7</version>
 					<extensions>true</extensions>
+				</plugin>
+				<plugin>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>exec-maven-plugin</artifactId>
+					<version>1.2.1</version>
 				</plugin>
 			</plugins>
 		</pluginManagement>
@@ -970,9 +975,19 @@
 
 	<repositories>
 		<repository>
-			<id>repository.springframework.maven.release</id>
-			<name>Spring Framework Maven Release Repository</name>
-			<url>http://maven.springframework.org/release</url>
+			<id>central</id>
+			<url>http://repo1.maven.org/maven2</url>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</repository>
+		<repository>
+			<id>maven.java.net</id>
+			<name>Java.net Maven2 Repository</name>
+			<url>http://download.java.net/maven/2</url>
 		</repository>
 		<repository>
 			<id>springbyexample.org</id>
@@ -982,11 +997,6 @@
 		<repository>
 			<id>m.g.o-public</id>
 			<url>http://maven.glassfish.org/content/groups/public/</url>
-		</repository>
-		<repository>
-			<id>maven.java.net</id>
-			<name>Java.net Maven2 Repository</name>
-			<url>http://download.java.net/maven/2</url>
 		</repository>
 		<repository>
 			<id>codehaus-snapshots</id>
