Migrating from futures to fork/join for the handlers.
git-svn-id: http://ikube.googlecode.com/svn/trunk@1313 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/libs/src/main/resources/ikube/common/spring.properties
+++ b/code/libs/src/main/resources/ikube/common/spring.properties
@@ -12,7 +12,7 @@ merge.factor=100
 buffered.docs=100
 max.field.length=10000
 max.read.length=1000000
-index.root=/tmp
+index.root=/mnt/exported
 index.directory.path=${index.root}/nas-five
 index.directory.path.backup=${index.directory.path}
 jdbc.batch.size=10000
@@ -20,7 +20,7 @@ internet.batch.size=100
 file.batch.size=100
 file.max.read.length=100000
 throttle=1
-max.actions=1
+max.actions=3
 # Max index size before another one is started in megs
 max.index.size=25000
 max.retry=10
@@ -41,10 +41,10 @@ max.revisions=1000000
 max.exceptions=10
 
 # The number of threads for each indexing component/connector
-table.handler.threads=1
-internet.handler.threads=1
-filesystem.handler.threads=1
-email.handler.threads=1
+table.handler.threads=4
+internet.handler.threads=4
+filesystem.handler.threads=4
+email.handler.threads=4
 
 # These parameters are client specific
 files.excluded.pattern=.*(.svn).*|.*(.db).*|.*(.exe).*|.*(.dll).*|.*(Password).*|.*(password).*|.*(RSA).*|.*(MANIFEST).*|.*(/root).*|.*(/proc).*|.*(/bin).*|.*(/boot).*|.*(/sbin).*|.*(/sys).*|.*(Backup).*|.*(/sys).*|.*(/media).*|.*(/mnt).*
@@ -64,7 +64,7 @@ end.tier=20
 ################################################
 
 # The delay before the scheduled tasks start executing
-delay=30000
+delay=300000
 # The period between notifications for timed tasks
 period=60000
 # The maximum age of the GeoSpatial index
@@ -79,7 +79,7 @@ cpu.load.threshold=0.9
 # Whether to use the stop words in the analyzer
 stemming.analyzer.stop.words=false
 
-minimum.free.space=3000
+minimum.free.space=1000
 minimum.free.space.for.notifications=10000
 
 # The H2 database credentials
@@ -97,7 +97,7 @@ h2.jdbc.url=jdbc:h2:file:ikube/ikube
 #;DB_CLOSE_ON_EXIT=FALSE
 
 #General JDBC settings
-jdbc.minPoolSize=1
+jdbc.minPoolSize=10
 jdbc.maxPoolSize=100
 jdbc.maxStatements=1000
 jdbc.checkOutTimeout=60000
