--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
 		<write.classes>-Dwrite.classes=true</write.classes>
 		<clean.classes>-Dclean.classes=true</clean.classes>
 		<included.packages>-Dincluded.packages=ikube</included.packages>
-		<excluded.packages>-Dexcluded.packages=workspace:model:Mock:Test:jpa:jaxws</excluded.packages>
+		<excluded.packages>-Dexcluded.packages=workspace:model:Mock:Test:Integration:jpa:jaxws</excluded.packages>
 		<included.adapters>-Dincluded.adapters=coverage:complexity:dependency</included.adapters>
 		<serenity.parameters>${included.adapters} ${included.packages} ${excluded.packages} ${write.classes} ${clean.classes}</serenity.parameters>
 		<memory.parameters>-XX:PermSize=256m -XX:MaxPermSize=512m -Xms1024m -Xmx4096m</memory.parameters>
