--- a/code/war/pom.xml
+++ b/code/war/pom.xml
@@ -112,7 +112,7 @@
 					</connectors>
 				</configuration>
 				<executions>
-					<!-- <execution>
+					<execution>
 						<id>start-jetty</id>
 						<phase>pre-integration-test</phase>
 						<goals>
@@ -128,7 +128,7 @@
 						<goals>
 							<goal>stop</goal>
 						</goals>
-					</execution> -->
+					</execution>
 				</executions>
 				<dependencies>
 					<dependency>
