--- a/code/core/pom.xml
+++ b/code/core/pom.xml
@@ -100,4 +100,13 @@
 		</plugins>
 	</build>
 	
+	<dependencies>
+		<dependency>
+			<groupId>ikube</groupId>
+			<artifactId>ikube-core</artifactId>
+			<version>${project.version}</version>
+			<scope>compile</scope>
+		</dependency>
+	</dependencies>
+	
 </project>
