Moved common code to the common module and started the deployer for the application.
git-svn-id: http://ikube.googlecode.com/svn/trunk@1413 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/core/pom.xml
+++ b/code/core/pom.xml
@@ -103,7 +103,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>ikube</groupId>
-			<artifactId>ikube-core</artifactId>
+			<artifactId>ikube-com</artifactId>
 			<version>${project.version}</version>
 			<scope>compile</scope>
 		</dependency>
