--- a/code/tool/pom.xml
+++ b/code/tool/pom.xml
@@ -30,30 +30,43 @@
 			</resource>
 		</resources>
 		<plugins>
-			<!-- <plugin>
+			
+			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>exec-maven-plugin</artifactId>
-				<configuration>
-					<executable>java</executable>
-					<mainClass>ikube.ant.SshXcuteTask</mainClass>
-					<classpathScope>compile</classpathScope>
-					<goal>java</goal>
-					<arguments>
-						<argument>192.168.1.8</argument>
-						<argument>michael</argument>
-						<argument>password</argument>
-						<argument>cd /opt/apache-tomcat-7.0.33-8080/bin;./startup.sh;</argument>
-					</arguments>
-				</configuration>
 				<executions>
 					<execution>
-						<phase>install</phase>
+						<phase>deploy</phase>
+						<configuration>
+							<executable>java</executable>
+							<mainClass>ikube.deploy.Deployer</mainClass>
+							<arguments>
+								<argument>.</argument>
+								<argument>deployer.xml</argument>
+								<argument>true</argument>
+								<argument>-classpath</argument>
+							</arguments>
+							<systemProperties>
+								<systemProperty>
+									<key>username</key>
+									<value>michael</value>
+								</systemProperty>
+								<systemProperty>
+									<key>password</key>
+									<value>Bp0st2013</value>
+								</systemProperty>
+							</systemProperties>
+							<workingDirectory>../../</workingDirectory>
+							<includePluginDependencies>true</includePluginDependencies>
+							<includeProjectDependencies>true</includeProjectDependencies>
+						</configuration>
 						<goals>
 							<goal>java</goal>
 						</goals>
 					</execution>
 				</executions>
-			</plugin> -->
+			</plugin>
+			
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
