--- a/code/tool/pom.xml
+++ b/code/tool/pom.xml
@@ -36,7 +36,7 @@
 				<artifactId>exec-maven-plugin</artifactId>
 				<executions>
 					<execution>
-						<phase>deploy</phase>
+						<phase>install</phase>
 						<configuration>
 							<executable>java</executable>
 							<mainClass>ikube.deploy.Deployer</mainClass>
@@ -47,14 +47,7 @@
 								<argument>-classpath</argument>
 							</arguments>
 							<systemProperties>
-								<systemProperty>
-									<key>username</key>
-									<value>michael</value>
-								</systemProperty>
-								<systemProperty>
-									<key>password</key>
-									<value>Bp0st2013</value>
-								</systemProperty>
+								
 							</systemProperties>
 							<workingDirectory>../../</workingDirectory>
 							<includePluginDependencies>true</includePluginDependencies>
