--- a/code/libs/src/main/resources/ikube/production/spring.properties
+++ b/code/libs/src/main/resources/ikube/production/spring.properties
@@ -1,4 +1,4 @@
 # The DB2 database credentials
 db2.jdbc.userid=db2
 db2.jdbc.password=Bp0st2013
-db2.jdbc.url=jdbc:db2://ikube.be:50000/icube
+db2.jdbc.url=jdbc:db2://81.95.118.139:50000/icube
