--- a/pom.xml
+++ b/pom.xml
@@ -992,6 +992,16 @@
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.social</groupId>
+			<artifactId>spring-social-core</artifactId>
+			<version>1.0.3.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.social</groupId>
+			<artifactId>spring-social-twitter</artifactId>
+			<version>1.0.3.RELEASE</version>
+		</dependency>
 	</dependencies>
 
 	<repositories>
@@ -1057,6 +1067,13 @@
 		<repository>
 			<id>jgit-repository</id>
 			<url>http://download.eclipse.org/jgit/maven</url>
+		</repository>
+		<repository>
+			<id>spring-snapshot-repository</id>
+			<url>http://repo.springsource.org/snapshot/</url>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
 		</repository>
 	</repositories>
 
