--- a/code/tool/pom.xml
+++ b/code/tool/pom.xml
@@ -36,7 +36,7 @@
 				<artifactId>exec-maven-plugin</artifactId>
 				<executions>
 					<execution>
-						<phase>install</phase>
+						<phase>deploy</phase>
 						<configuration>
 							<executable>java</executable>
 							<mainClass>ikube.deploy.Deployer</mainClass>
@@ -46,9 +46,6 @@
 								<argument>true</argument>
 								<argument>-classpath</argument>
 							</arguments>
-							<systemProperties>
-								
-							</systemProperties>
 							<workingDirectory>../../</workingDirectory>
 							<includePluginDependencies>true</includePluginDependencies>
 							<includeProjectDependencies>true</includeProjectDependencies>
@@ -94,15 +91,6 @@
 					</execution>
 				</executions>
 			</plugin>
-			<!-- <plugin>
-				<groupId>de.saumya.mojo</groupId>
-				<artifactId>bundler-maven-plugin</artifactId>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.felix</groupId>
-				<artifactId>maven-bundle-plugin</artifactId>
-				<extensions>true</extensions>
-			</plugin> -->
 		</plugins>
 	</build>
 
@@ -127,7 +115,6 @@
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
-
 		<dependency>
 			<groupId>sevenzip</groupId>
 			<artifactId>jbinding</artifactId>
@@ -152,11 +139,6 @@
 			<artifactId>jsch</artifactId>
 			<version>0.1.48</version>
 		</dependency>
-		<!-- <dependency>
-			<groupId>sshxcute</groupId>
-			<artifactId>sshxcute</artifactId>
-			<version>1.0.0</version>
-		</dependency> -->
 		<dependency>
 			<groupId>ant</groupId>
 			<artifactId>ant</artifactId>
