--- a/code/core/pom.xml
+++ b/code/core/pom.xml
@@ -27,10 +27,7 @@
 				<version>2.7.1</version>
 				<configuration>
 					<forkMode>once</forkMode>
-					<!-- <parallel>false</parallel> -->
-					<!-- <threadCount>10</threadCount> -->
-					<!-- <useUnlimitedThreads>true</useUnlimitedThreads> -->
-					<argLine>-javaagent:../../serenity/serenity.jar ${memory.parameters} ${serenity.parameters}</argLine>
+					<argLine>-javaagent:../../serenity/serenity.jar ${memory.parameters} ${serenity.parameters} -XX:-UseSplitVerifier</argLine>
 					<excludes>
 						<exclude>**/TextParserTest.java</exclude>
 					</excludes>
