--- a/code/com/pom.xml
+++ b/code/com/pom.xml
@@ -22,7 +22,7 @@
 				<directory>src/main/resources</directory>
 			</resource>
 		</resources>
-		<plugins>
+		<!-- <plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
@@ -34,7 +34,7 @@
 					<argLine>-javaagent:../../serenity/serenity.jar ${memory.parameters} ${serenity.parameters} -XX:-UseSplitVerifier</argLine>
 				</configuration>
 			</plugin>
-		</plugins>
+		</plugins> -->
 	</build>
 
 	<dependencies>
