--- a/code/core/pom.xml
+++ b/code/core/pom.xml
@@ -21,7 +21,7 @@
 	<build>
 		<plugins>
 			<!-- This plugin runs the unit tests. -->
-			<plugin>
+			<!-- <plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.7.1</version>
@@ -32,7 +32,7 @@
 						<exclude>**/TextParserTest.java</exclude>
 					</excludes>
 				</configuration>
-			</plugin>
+			</plugin> -->
 			<!-- No idea what this plugin does, perhaps linked to PMD? -->
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
