--- a/code/core/pom.xml
+++ b/code/core/pom.xml
@@ -20,6 +20,15 @@
 
 	<build>
 		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.7.1</version>
+				<configuration>
+					<forkMode>once</forkMode>
+					<argLine>-javaagent:../../serenity/serenity.jar ${memory.parameters} ${serenity.parameters} -XX:-UseSplitVerifier</argLine>
+				</configuration>
+			</plugin>
 			<!-- No idea what this plugin does, perhaps linked to PMD? -->
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
