--- a/code/core/pom.xml
+++ b/code/core/pom.xml
@@ -106,12 +106,12 @@
 			<version>1.0.3.RELEASE</version>
 			<scope>compile</scope>
 		</dependency> -->
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.springframework.social</groupId>
 			<artifactId>spring-social-twitter</artifactId>
 			<version>1.1.0.BUILD-SNAPSHOT</version>
 			<scope>compile</scope>
-		</dependency>
+		</dependency> -->
 		<!-- <dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-core</artifactId>
@@ -124,15 +124,15 @@
 			<version>2.2.2</version>
 			<scope>compile</scope>
 		</dependency> -->
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.codehaus.jackson</groupId>
 			<artifactId>jackson-mapper-asl</artifactId>
 			<version>1.9.9</version>
 			<scope>compile</scope>
-		</dependency>
+		</dependency> -->
 	</dependencies>
 	
-	<repositories>
+	<!-- <repositories>
 		<repository>
 			<id>spring-snapshot-repository</id>
 			<url>http://repo.springsource.org/snapshot/</url>
@@ -140,6 +140,6 @@
 				<enabled>true</enabled>
 			</snapshots>
 		</repository>
-	</repositories>
+	</repositories> -->
 	
 </project>
