Uncommented the modules.
git-svn-id: http://ikube.googlecode.com/svn/trunk@1453 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/pom.xml
+++ b/pom.xml
@@ -57,9 +57,9 @@
 		<module>code/com</module>
 		<module>code/core</module>
 		<module>code/war</module>
-		<!-- <module>code/site</module>
+		<module>code/site</module>
 		<module>code/libs</module>
-		<module>code/tool</module> -->
+		<module>code/tool</module>
 	</modules>
 
 	<build>
