--- a/code/tool/pom.xml
+++ b/code/tool/pom.xml
@@ -36,7 +36,7 @@
 				<artifactId>exec-maven-plugin</artifactId>
 				<executions>
 					<execution>
-						<phase>deploy</phase>
+						<phase>install</phase>
 						<configuration>
 							<executable>java</executable>
 							<mainClass>ikube.deploy.Deployer</mainClass>
