--- a/code/tool/src/main/resources/ikube/spring.properties
+++ b/code/tool/src/main/resources/ikube/spring.properties
@@ -4,7 +4,8 @@ ikube-configuration-jar=configuration.jar
 sleep=30
 
 target-directory=code/war/target
-configuration-directory=code/libs/src/main/resources/ikube
+resources-directory=code/libs/src/main/resources
+configuration-directory=${resources-directory}/ikube
 
 tomcat-directory=/opt/apache-tomcat-7.0.33-8090
 tomcat-bin-directory=${tomcat-directory}/bin
