Added some logging.
git-svn-id: http://ikube.googlecode.com/svn/trunk@1495 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/libs/src/main/resources/ikube/common/spring.properties
+++ b/code/libs/src/main/resources/ikube/common/spring.properties
@@ -59,6 +59,8 @@ searcher.web.service.url=http://81.95.118.139/ikube/service/search/multi/spatial
 start.tier=10
 end.tier=20
 
+multi.language.ngram=8
+
 ################################################
 ## These properties should generally not be modified by clients               ##
 ################################################
