--- a/code/core/pom.xml
+++ b/code/core/pom.xml
@@ -74,12 +74,15 @@
 				<version>1.6</version>
 				<executions>
 					<execution>
-						<id>write-release-info</id>
+						<id>copy-configuration</id>
 						<phase>test</phase>
 						<configuration>
 							<target>
 								<echo message="Base directory : ${basedir}, ">Base directory : ${basedir}</echo>
 								<copy todir="ikube" failonerror="true">
+									<fileset dir="../libs/src/main/resources/ikube" />
+								</copy>
+								<copy todir="../../ikube" failonerror="true">
 									<fileset dir="../libs/src/main/resources/ikube" />
 								</copy>
 							</target>
