--- a/pom.xml
+++ b/pom.xml
@@ -57,9 +57,9 @@
 		<module>code/com</module>
 		<module>code/core</module>
 		<module>code/war</module>
-		<module>code/site</module>
+		<!-- <module>code/site</module>
 		<module>code/libs</module>
-		<module>code/tool</module>
+		<module>code/tool</module> -->
 	</modules>
 
 	<build>
@@ -1025,6 +1025,16 @@
 			<artifactId>spring-social-twitter</artifactId>
 			<version>1.1.0.BUILD-SNAPSHOT</version>
 			<scope>compile</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>org.springframework.social</groupId>
+					<artifactId>spring-social-core</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.springframework.social</groupId>
+					<artifactId>spring-social-config</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -1036,6 +1046,11 @@
 			<groupId>lingpipe</groupId>
 			<artifactId>lingpipe</artifactId>
 			<version>4.1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-jexl</artifactId>
+			<version>2.1.1</version>
 		</dependency>
 	</dependencies>
 
