Updated the internet handler and the configuration for the Vlaams Parlement.
git-svn-id: http://ikube.googlecode.com/svn/trunk@1518 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/libs/src/main/resources/ikube/common/spring.properties
+++ b/code/libs/src/main/resources/ikube/common/spring.properties
@@ -48,7 +48,7 @@ email.handler.threads=4
 
 # These parameters are client specific
 files.excluded.pattern=.*(.svn).*|.*(.db).*|.*(.exe).*|.*(.dll).*|.*(Password).*|.*(password).*|.*(RSA).*|.*(MANIFEST).*|.*(/root).*|.*(/proc).*|.*(/bin).*|.*(/boot).*|.*(/sbin).*|.*(/sys).*|.*(Backup).*|.*(/sys).*|.*(/media).*|.*(/mnt).*
-internet.excluded.pattern=.*(/search).*|.*(r=).*|.*(terminate).*|.*(startup).*
+internet.excluded.pattern=.*(/search).*|.*(r=).*|.*(terminate).*|.*(startup).*|.*(feedback).*|.*(resultaat).*
 
 language.word.lists.directory=./ikube/common/languages
 language.word.lists.directory.index=./ikube/common/languages/index
