--- a/pom.xml
+++ b/pom.xml
@@ -1052,6 +1052,11 @@
 			<artifactId>commons-jexl</artifactId>
 			<version>2.1.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-math3</artifactId>
+			<version>3.2</version>
+		</dependency>
 	</dependencies>
 
 	<repositories>
