Updated the configuration and the deployer configuration.
git-svn-id: http://ikube.googlecode.com/svn/trunk@1530 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/tool/src/main/resources/ikube/spring.properties
+++ b/code/tool/src/main/resources/ikube/spring.properties
@@ -7,8 +7,8 @@ target-directory=code/war/target
 resources-directory=code/libs/src/main/resources
 configuration-directory=${resources-directory}/ikube
 
-tomcat-directory=/opt/apache-tomcat-7.0.33-8090
+tomcat-directory=/opt/apache-tomcat-7.0.33-8080
 tomcat-bin-directory=${tomcat-directory}/bin
 tomcat-webapps-directory=${tomcat-directory}/webapps
 
-verbose=false
+verbose=true
