Added some logging to the file utilities.
git-svn-id: http://ikube.googlecode.com/svn/trunk@1531 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/libs/src/main/resources/ikube/common/spring.properties
+++ b/code/libs/src/main/resources/ikube/common/spring.properties
@@ -12,8 +12,8 @@ merge.factor=100
 buffered.docs=100
 max.field.length=10000
 max.read.length=1000000
-index.root=/mnt/exported
-index.directory.path=${index.root}/nas-five
+index.root=/mnt
+index.directory.path=${index.root}/indexes
 index.directory.path.backup=${index.directory.path}
 jdbc.batch.size=10000
 internet.batch.size=100
