--- a/pom.xml
+++ b/pom.xml
@@ -1068,7 +1068,12 @@
 			<artifactId>libsvm</artifactId>
 			<version>1.0.0</version>
 		</dependency>
-		
+
+		<dependency>
+			<groupId>nz.ac.waikato.cms.weka</groupId>
+			<artifactId>weka-stable</artifactId>
+			<version>3.6.9</version>
+		</dependency>
 	</dependencies>
 
 	<repositories>
