--- a/pom.xml
+++ b/pom.xml
@@ -1075,9 +1075,9 @@
 			<version>3.6.9</version>
 		</dependency>
 		<dependency>
-			<groupId>org.jooq</groupId>
-			<artifactId>jooq</artifactId>
-			<version>3.1.0</version>
+			<groupId>org.encog</groupId>
+			<artifactId>encog-core</artifactId>
+			<version>3.0.1</version>
 		</dependency>
 	</dependencies>
 
