--- a/code/libs/src/main/resources/ikube/common/spring.properties
+++ b/code/libs/src/main/resources/ikube/common/spring.properties
@@ -12,7 +12,7 @@ merge.factor=100
 buffered.docs=100
 max.field.length=10000
 max.read.length=1000000
-index.root=/mnt
+index.root=/mnt/flash
 index.directory.path=${index.root}/indexes
 index.directory.path.backup=${index.directory.path}
 jdbc.batch.size=10000
