Excluded the non-existant crypto.
git-svn-id: http://ikube.googlecode.com/svn/trunk@1578 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/pom.xml
+++ b/pom.xml
@@ -1034,6 +1034,10 @@
 					<groupId>org.springframework.social</groupId>
 					<artifactId>spring-social-config</artifactId>
 				</exclusion>
+				<exclusion>
+					<artifactId>spring-security-crypto</artifactId>
+					<groupId>org.springframework.security</groupId>
+				</exclusion>
 			</exclusions>
 		</dependency>
 		<dependency>
