--- a/pom.xml
+++ b/pom.xml
@@ -1088,6 +1088,11 @@
 			<artifactId>squiggle</artifactId>
 			<version>1.4.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-crypto</artifactId>
+			<version>3.1.4.RELEASE</version>
+		</dependency>
 	</dependencies>
 
 	<repositories>
