Added the integration index folder to the build.
git-svn-id: http://ikube.googlecode.com/svn/trunk@1590 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/war/pom.xml
+++ b/code/war/pom.xml
@@ -75,6 +75,9 @@
 								<copy todir="ikube" failonerror="true">
 									<fileset dir="../libs/src/main/resources/ikube" />
 								</copy>
+								<copy todir="ikube" failonerror="true">
+									<fileset dir="../libs/src/main/resources/indexes/integration" />
+								</copy>
 							</target>
 						</configuration>
 						<goals>
