--- a/pom.xml
+++ b/pom.xml
@@ -419,13 +419,13 @@
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-jms</artifactId>
 			<version>${spring.version}</version>
 			<type>jar</type>
 			<scope>compile</scope>
-		</dependency>
+		</dependency> -->
 		<dependency>
 			<groupId>org.apache.xbean</groupId>
 			<artifactId>xbean-spring</artifactId>
@@ -1046,11 +1046,11 @@
 			<version>${spring.version}</version>
 			<scope>compile</scope>
 		</dependency>
-		<dependency>
+		<!-- <dependency>
 			<groupId>lingpipe</groupId>
 			<artifactId>lingpipe</artifactId>
 			<version>4.1.0</version>
-		</dependency>
+		</dependency> -->
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-jexl</artifactId>
@@ -1062,27 +1062,27 @@
 			<version>3.2</version>
 		</dependency>
 		
-		<dependency>
+		<!-- <dependency>
 			<groupId>javaml</groupId>
 			<artifactId>javaml</artifactId>
 			<version>0.1.7</version>
-		</dependency>
-		<dependency>
+		</dependency> -->
+		<!-- <dependency>
 			<groupId>libsvm</groupId>
 			<artifactId>libsvm</artifactId>
 			<version>1.0.0</version>
-		</dependency>
+		</dependency> -->
 
 		<dependency>
 			<groupId>nz.ac.waikato.cms.weka</groupId>
 			<artifactId>weka-stable</artifactId>
 			<version>3.6.9</version>
 		</dependency>
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.encog</groupId>
 			<artifactId>encog-core</artifactId>
 			<version>3.0.1</version>
-		</dependency>
+		</dependency> -->
 		<dependency>
 			<groupId>squiggle</groupId>
 			<artifactId>squiggle</artifactId>
