Updated the classifier and the deployer script.
git-svn-id: http://ikube.googlecode.com/svn/trunk@1615 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/tool/src/main/resources/ikube/spring.properties
+++ b/code/tool/src/main/resources/ikube/spring.properties
@@ -7,7 +7,7 @@ target-directory=code/war/target
 resources-directory=code/libs/src/main/resources
 configuration-directory=${resources-directory}/ikube
 
-tomcat-directory=/opt/apache-tomcat-7.0.33-8080
+tomcat-directory=/home/apache-tomcat-7.0.42/webapps
 tomcat-bin-directory=${tomcat-directory}/bin
 tomcat-webapps-directory=${tomcat-directory}/webapps
 
