--- a/code/war/src/main/webapp/WEB-INF/web.xml
+++ b/code/war/src/main/webapp/WEB-INF/web.xml
@@ -50,7 +50,7 @@
 			<param-value></param-value>
 		</init-param>
 	</servlet>
-	<servlet-mapping>
+	<servlet-mapping>y
 		<servlet-name>springDispatcherServlet</servlet-name>
 		<url-pattern>*.html</url-pattern>
 	</servlet-mapping>
@@ -70,8 +70,8 @@
 	</servlet-mapping>
 
 	<welcome-file-list>
-		<welcome-file>index.jsp</welcome-file>
-		<welcome-file>index.html</welcome-file>
+		<welcome-file>dash.jsp</welcome-file>
+		<welcome-file>dash.html</welcome-file>
 	</welcome-file-list>
 
 	<jsp-config>
