Continued with the new ui, added the type ahead controller for the header page, just need the data now ;)
git-svn-id: http://ikube.googlecode.com/svn/trunk@1629 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/war/src/main/webapp/WEB-INF/web.xml
+++ b/code/war/src/main/webapp/WEB-INF/web.xml
@@ -50,7 +50,7 @@
 			<param-value></param-value>
 		</init-param>
 	</servlet>
-	<servlet-mapping>y
+	<servlet-mapping>
 		<servlet-name>springDispatcherServlet</servlet-name>
 		<url-pattern>*.html</url-pattern>
 	</servlet-mapping>
