Added some logic to only get the disk space for the mounts and not for the whole disk, and reinstated some tests. Added some updates to the ui, nothing much though.
git-svn-id: http://ikube.googlecode.com/svn/trunk@1630 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/war/pom.xml
+++ b/code/war/pom.xml
@@ -81,6 +81,9 @@
 								<copy todir="ikube/production" failonerror="true">
 									<fileset dir="../libs/src/main/resources/indexes/production" />
 								</copy>
+								<copy todir="ikube/mineco" failonerror="true">
+									<fileset dir="../libs/src/main/resources/indexes/mineco" />
+								</copy>
 							</target>
 						</configuration>
 						<goals>
