--- a/code/core/pom.xml
+++ b/code/core/pom.xml
@@ -82,9 +82,9 @@
 								<copy todir="ikube" failonerror="true">
 									<fileset dir="../libs/src/main/resources/ikube" />
 								</copy>
-								<!-- <copy todir="ikube/production" failonerror="true">
-									<fileset dir="../libs/src/main/resources/indexes/production" />
-								</copy> -->
+								<copy todir="ikube/integration" failonerror="true">
+									<fileset dir="../libs/src/main/resources/indexes/integration" />
+								</copy>
 								<copy todir="../../ikube" failonerror="true">
 									<fileset dir="../libs/src/main/resources/ikube" />
 								</copy>
