Started the dynamic complex search page.
git-svn-id: http://ikube.googlecode.com/svn/trunk@1637 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/tool/src/main/resources/ikube/spring.properties
+++ b/code/tool/src/main/resources/ikube/spring.properties
@@ -7,8 +7,21 @@ target-directory=code/war/target
 resources-directory=code/libs/src/main/resources
 configuration-directory=${resources-directory}/ikube
 
-tomcat-directory=/home/apache-tomcat-7.0.42/webapps
-tomcat-bin-directory=${tomcat-directory}/bin
-tomcat-webapps-directory=${tomcat-directory}/webapps
+base-dir=/home/
 
-verbose=true
+tomcat-one=apache-tomcat-6.0.29-1
+tomcat-two=apache-tomcat-6.0.29-2
+tomcat-three=apache-tomcat-6.0.29-3
+
+tomcat-one-home=${base-dir}${tomcat-one}
+tomcat-two-home=${base-dir}${tomcat-two}
+tomcat-three-home=${base-dir}${tomcat-three}
+
+tomcat-one-bin=${tomcat-one-home}/bin
+tomcat-one-webapps=${tomcat-one-home}/webapps
+
+tomcat-two-bin=${}tomcat-two-home/bin
+tomcat-two-webapps=${tomcat-two-home}/webapps
+
+tomcat-three-bin=${tomcat-three-home}/bin
+tomcat-three-webapps=${tomcat-three-home}/webapps
