--- a/code/libs/src/main/resources/ikube/common/spring.properties
+++ b/code/libs/src/main/resources/ikube/common/spring.properties
@@ -11,7 +11,7 @@ compound.file=true
 merge.factor=100
 buffered.docs=100
 max.field.length=10000
-max.read.length=1000000
+max.read.length=10000000
 index.root=/home
 index.directory.path=${index.root}/indexes
 index.directory.path.backup=${index.directory.path}
@@ -22,7 +22,7 @@ file.max.read.length=100000
 throttle=1
 max.actions=3
 # Max index size before another one is started in megs
-max.index.size=25000
+max.index.size=5000
 max.retry=10
 
 # These are client specific for Lucene
@@ -41,10 +41,10 @@ max.revisions=1000000
 max.exceptions=10
 
 # The number of threads for each indexing component/connector
-table.handler.threads=4
-internet.handler.threads=4
+table.handler.threads=10
+internet.handler.threads=10
 filesystem.handler.threads=4
-email.handler.threads=4
+email.handler.threads=1
 
 # These parameters are client specific
 files.excluded.pattern=.*(.svn).*|.*(.db).*|.*(.exe).*|.*(.dll).*|.*(Password).*|.*(password).*|.*(RSA).*|.*(MANIFEST).*|.*(/root).*|.*(/proc).*|.*(/bin).*|.*(/boot).*|.*(/sbin).*|.*(/sys).*|.*(Backup).*|.*(/sys).*|.*(/media).*|.*(/mnt).*|.*(/dev).*|.*(/lib).*|.*(/run).*|.*(.jar).*|.*(.zip).*|.*(.war).*|.*(/etc).*|.*(.plugins).*
@@ -75,13 +75,13 @@ max.age.geospatial=6000
 # The number of minutes before the throttle is increased
 cpu.load.period=3
 # Whether this listener is active and will modify the throttle
-cpu.load.active=false
+cpu.load.active=true
 # The maximum load per cpu before the throttle is increased for all indexes
-cpu.load.threshold=0.9
+cpu.load.threshold=28
 # Whether to use the stop words in the analyzer
 stemming.analyzer.stop.words=false
 
-minimum.free.space=1000
+minimum.free.space=3000
 minimum.free.space.for.notifications=10000
 
 # The H2 database credentials
