Doing the configuration for the street data.
git-svn-id: http://ikube.googlecode.com/svn/trunk@1664 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/tool/pom.xml
+++ b/code/tool/pom.xml
@@ -102,6 +102,12 @@
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
+			<groupId>ikube</groupId>
+			<artifactId>ikube-core</artifactId>
+			<version>${project.version}</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
 			<groupId>jdom</groupId>
 			<artifactId>jdom</artifactId>
 			<version>1.1</version>
